# Semana-3

Ejercicio1/: CMakeLists.txt  Multiplicacion.cpp  Multiplicacion.h  Raiz.h  Resta.h  Suma.cpp  Suma.h  main.cpp
Ejercicio2/: A-Ejercicio2.md  CMakeLists.txt  Circulo.cpp  Circulo.h  Figura.cpp  Figura.h  Rectangulo.cpp  Rectangulo.h  main.cpp
Ejercicio3/: Animal.cpp  Animal.h  CMakeLists.txt  README.md  main.cpp
PracticaCalculadora/: CMakeLists.txt  Calculadora.cpp  Calculadora.h  Division.cpp  Division.h  IOperacion.cpp  IOperacion.h  Raiz.cpp  Resta.cpp  main.cpp
